# libmahjong

./: .clang-tidy  CMakeLists.txt  README.md
aicontrollers/: CMakeLists.txt  alphabeticalbot.cpp  alphabeticalbot.h  angrydiscardobot.cpp  angrydiscardobot.h
controllers/: CMakeLists.txt  fasttanyao.cpp  fasttanyao.h  gentlemanbot.cpp  gentlemanbot.h  thricebot.cpp  thricebot.h  totobot.cpp  totobot.h
docs/: TileNotation.md
include/: CMakeLists.txt  analysis.h  controllermanager.h  decisionfunction.h  event.h  gamestate.h  hand.h  handformer.h  handnode.h  hands.h  meld.h  piecetype.h  player.h  playercontroller.h  score.h  settings.h  statefunctions.h  stateutilities.h  walls.h  winds.h
src/: CMakeLists.txt  controllermanager.cpp  decisionfunction.cpp  event.cpp  gamestate.cpp  hand.cpp  handformer.cpp  handnode.cpp  hands.cpp  handtree.cpp  meld.cpp  piecetype.cpp  player.cpp  possiblesets.cpp  statecontroller.cpp  stateutilities.cpp  walls.cpp
src/statefunctions/: chi.cpp  concealedkan.cpp  convertedkan.cpp  discard.cpp  draw.cpp  error.cpp  exhaust.cpp  gameend.cpp  gamestart.cpp  kan.cpp  kandiscard.cpp  playerhand.cpp  pon.cpp  replacement.cpp  riichi.cpp  ron.cpp  roundend.cpp  roundstart.cpp  tsumo.cpp
tests/: CMakeLists.txt  handformer.test.cpp  piece_type.test.cpp  score_hand.test.cpp
tests/yakus/: afterkan.test.cpp  allgreen.test.cpp  allhonors.test.cpp  allpon.test.cpp  allsimples.test.cpp  allterminals.test.cpp  allterminalsandhonors.test.cpp  bigfourwinds.test.cpp  bigthreedragons.test.cpp  blessingofearth.test.cpp  blessingofheaven.test.cpp  blessingofman.test.cpp  concealedhand.test.cpp  concealedpon.test.cpp  dragonpon.test.cpp  fourconcealedpons.test.cpp  fourkans.test.cpp  fullflush.test.cpp  halfflush.test.cpp  littlefourwinds.test.cpp  littlethreedragons.test.cpp  maxbranches.test.cpp  mixedtriplechi.test.cpp  ninegates.test.cpp  outsidehand.test.cpp  pinfu.test.cpp  puredoublechi.test.cpp  purestraight.test.cpp  riichi.test.cpp  robbingkan.test.cpp  sevenpairs.test.cpp  terminalinsets.test.cpp  thirteenorphans.test.cpp  triplekan.test.cpp  triplepon.test.cpp  twicepuredoublechi.test.cpp  underthesea.test.cpp  windpons.test.cpp
tools/: CMakeLists.txt
tools/driver/: CMakeLists.txt  hand.gml  main.cpp
tools/mahjongshuffle/: CMakeLists.txt  main.cpp  mainwindow.cpp
tools/testingzone/: CMakeLists.txt  main.cpp
